# do not edit -- automatically generated by arch changelog
# arch-tag: automatic-ChangeLog--jgoerzen@complete.org--projects/missinglib--head--0.0
#

2004-08-31 21:42:24 GMT	John Goerzen <jgoerzen@complete.org>	patch-67

    Summary:
      Fixed BNFsupport docs
    Revision:
      missinglib--head--0.0--patch-67


    modified files:
     ChangeLog Makefile libsrc/bnf/bNFsupport.mli


2004-08-31 21:37:23 GMT	John Goerzen <jgoerzen@complete.org>	patch-66

    Summary:
      Merged in pa_bparser support
    Revision:
      missinglib--head--0.0--patch-66


    new files:
     libsrc/camlp4/.arch-ids/=id libsrc/camlp4doc/.arch-ids/=id
     libsrc/camlp4doc/pa_bparser.mli

    removed files:
     unmerged/.arch-ids/=id

    modified files:
     ChangeLog libsrc/META libsrc/Makefile
     libsrc/camlp4/pa_bparser.ml

    renamed files:
     unmerged/.arch-ids/pa_op.ml.id
       ==> libsrc/camlp4/.arch-ids/pa_bparser.ml.id
     unmerged/.arch-ids/pa_op.orig.ml.id
       ==> libsrc/camlp4/.arch-ids/pa_op.ml.ocaml-orig.id
     unmerged/pa_op.ml
       ==> libsrc/camlp4/pa_bparser.ml
     unmerged/pa_op.orig.ml
       ==> libsrc/camlp4/pa_op.ml.ocaml-orig

    new directories:
     libsrc/camlp4 libsrc/camlp4/.arch-ids libsrc/camlp4doc
     libsrc/camlp4doc/.arch-ids

    removed directories:
     unmerged unmerged/.arch-ids


2004-08-31 20:28:46 GMT	John Goerzen <jgoerzen@complete.org>	patch-65

    Summary:
      Added the beta support for backtracking parsers
    Revision:
      missinglib--head--0.0--patch-65


    new files:
     unmerged/.arch-ids/=id unmerged/.arch-ids/pa_op.ml.id
     unmerged/.arch-ids/pa_op.orig.ml.id unmerged/pa_op.ml
     unmerged/pa_op.orig.ml

    modified files:
     ChangeLog libsrc/bnf/bNFsupport.ml

    new directories:
     unmerged unmerged/.arch-ids


2004-08-31 18:18:50 GMT	John Goerzen <jgoerzen@complete.org>	patch-64

    Summary:
      Major refactor of bnf support code to better support stream operations
    Revision: